src/snapshots/ktype__view__tests__duration_60s.snap
---
source: src/view.rs
expression: render_with_duration(2)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
kern  [time] words   15  30  [60]   [←→] cycle  [tab] restart  [shift+tab] → wor
                                                                                
the quick brown                                                                 
                                                                                
                                                                                
                                                                                
[esc] quit
