src/snapshots/ktype__view__tests__idle_screen_update_banner_snapshot.snap
---
source: src/view.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
ktype  [time] words   [15]  30  60  custom   [←→] cycle  [tab] restart  [shift+t
                                                                                
                                                                                
the quick brown fox                                                             
                                                                                
                                                                                
                                                                                
                                                                                
                                   [esc] quit                                   
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
               new version v1.0.0 available — cargo install ktype
