src/snapshots/ktype__view__tests__idle_wide_terminal.snap
---
source: src/view.rs
expression: output
---
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                 ktype  [time] words   [15]  30  60  custom   [←→] cycle  [tab] restart  [shift+tab] → word mode                                
                                                                                                                                                                
                                                                                                                                                                
                                        the quick brown fox                                                                                                     
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                           [esc] quit
