src/snapshots/ktype__view__tests__modal_time.snap
---
source: src/view.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
             ╭────────────────────────────────────────────────────╮             
ktype  [time]│                    Test Duration                   │art  [shift+t
             │                1 hour and 30 minutes               │             
             │╭──────────────────────────────────────────────────╮│             
the quick bro││1h30m_                                            ││             
             │╰──────────────────────────────────────────────────╯│             
             │use h for hours, m for minutes (e.g. 1h30m). 0 = inf│             
             │            [enter] apply   [esc] cancel            │             
             │                                                    │             
             ╰────────────────────────────────────────────────────╯
