src/snapshots/ktype__view__tests__modal_words.snap
---
source: src/view.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
ktype  [time]╭────────────────────────────────────────────────────╮art  [shift+t
             │                 Custom word amount                 │             
             │                      42 words                      │             
the quick bro│╭──────────────────────────────────────────────────╮│             
             ││42_                                               ││             
             │╰──────────────────────────────────────────────────╯│             
             │            [enter] apply   [esc] cancel            │             
             ╰────────────────────────────────────────────────────╯             
                                   [esc] quit
