src/snapshots/ktype__view__tests__results_screen_snapshot.snap
---
source: src/view.rs
expression: output
---
                           [time] words   [15]  30  60                          
                                                                                
                                      ktype                                     
                                                                                
                           wpm       raw wpm        acc                         
                             12          18          0%                         
                                                                                
                                     no data                                    
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                        [tab] change/restart   [esc] quit
