src/snapshots/ktype__view__tests__results_screen_with_chart_snapshot.snap
---
source: src/view.rs
expression: output
---
                           [time] words   [15]  30  60                          
                                                                                
                                      ktype                                     
                                                                                
                           wpm       raw wpm        acc                         
                             24          24         90%                         
                                                                                
  26                                                                            
                           ×  ⢀⣀⡠⠤⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒               
                        ⣀⡠⠤⠔⠒⠉⠁                                                 
  20               ⡠⠔⠒⠊⠉                                                        
                  ⡔⠁                                                            
                ⢀⠎                                                              
               ⢠⠊                                                               
  13          ⡰⠁                                                                
            ⢀⠜                                                                  
           ⢀⠎                                                                   
   7      ⡠⠃                                                                    
         ⡔⠁                                                                     
       ⢀⠎                                                                       
      ⢠⠊                                                                        
   0 ⡰⠁                                                                         
                    1              2              3              4              
                        [tab] change/restart   [esc] quit
