src/snapshots/ktype__view__tests__running_elapsed_5s.snap
---
source: src/view.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
10                                                                              
                                                                                
the quick brown
