src/snapshots/ktype__view__tests__running_focus_mode.snap
---
source: src/view.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
15                                                                              
                                                                                
the quick brown fox
